[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moview"
version = "0.1.0"
description = "Molecular Orbital Viewer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scikit-image>=0.22",
    "pyqtgraph>=0.13",
    "PyQt6>=6.6",
    "PyOpenGL>=3.1",
]

[project.optional-dependencies]
dev = []

[project.scripts]
moviewer = "moview.main:main"

[tool.hatch.build.targets.wheel]
packages = ["moview"]
